--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
+    "bootstrap": "4.0.0-beta.2",
     "rxjs": "~6.5.4",
+    "sass": "^1.26.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
@@ -28,9 +30,9 @@
     "@angular/cli": "~9.0.5",
     "@angular/compiler-cli": "~9.0.5",
     "@angular/language-service": "~9.0.5",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
